--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "wizpay/wizpay",
-    "description": "Magento 2 Wizpay Payment Module",
+    "name": "wizit/wizit",
+    "description": "Magento 2 Wizit Payment Module",
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*"
     },
     "type": "magento2-module",
-    "version": "1.1.5",
+    "version": "1.0",
     "license": [
         "OSL-3.0"
     ],
     "authors": [
         {
-            "name": "Wizpay",
+            "name": "Wizit",
             "homepage": "https://uatportal.wizardpay.com.au/",
             "role": "Developer"
         }
@@ -21,7 +21,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Wizpay\\Wizpay\\": ""
+            "Wizit\\Wizit\\": ""
         }
     }
 }
