update version number

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "Wizit",
-            "homepage": "https://uatportal.wizardpay.com.au/",
+            "homepage": "https://wizit.money",
             "role": "Developer"
         }
     ],
